@@ -1,0 +1,2 @@
+copy *.glade c:\msvc\tilp\glade\
+del *.bak
